--- a/samples/index.html
+++ b/samples/index.html
@@ -8,6 +8,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	<meta charset="utf-8">
 	<title>CKEditor Sample</title>
 	<script src="../ckeditor.js"></script>
+	<script src="../config.js"></script>
 	<script src="js/sample.js"></script>
 	<link rel="stylesheet" href="css/samples.css">
 	<link rel="stylesheet" href="toolbarconfigurator/lib/codemirror/neo.css">
