--- a/tests/plugins/copyformatting/manual/edgefocus.html
+++ b/tests/plugins/copyformatting/manual/edgefocus.html
@@ -7,8 +7,5 @@
 		bender.ignore();
 	}
 
-	CKEDITOR.replace( 'editor1', {
-		width: '30em',
-		height: '20em'
-	} );
+	CKEDITOR.replace( 'editor1' );
 </script>
