--- a/tests/plugins/easyimage/manual/progressbar.html
+++ b/tests/plugins/easyimage/manual/progressbar.html
@@ -23,9 +23,11 @@
 </div>
 
 <script>
-	if ( easyImageTools.isUnsupportedEnvironment() ) {
+	// Ignore on mobiles due to lack of support for files drag and drop.
+	if ( easyImageTools.isUnsupportedEnvironment() || bender.tools.env.mobile ) {
 		bender.ignore();
 	}
+
 	var IMG_URL = '%BASE_PATH%_assets/logo.png',
 		commonConfig = {
 			cloudServices_url: 'https://files.cke-cs.com/upload/',
