--- a/tests/plugins/widgetselection/manual/specialcharacters.html
+++ b/tests/plugins/widgetselection/manual/specialcharacters.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-	if ( !CKEDITOR.env.webkit ) {
+	if ( !CKEDITOR.env.webkit || bender.tools.env.mobile ) {
 		bender.ignore();
 	}
 	CKEDITOR.replace( 'editor1', {
