Add missing comment simmilar to other places.

--- a/tests/plugins/widgetselection/manual/specialcharacters.html
+++ b/tests/plugins/widgetselection/manual/specialcharacters.html
@@ -5,6 +5,7 @@
 </div>
 
 <script>
+	// Ignore on mobiles due to keyboard shortcuts requirements.
 	if ( !CKEDITOR.env.webkit || bender.tools.env.mobile ) {
 		bender.ignore();
 	}
