Updated version tag and ignored manual test for mobiles.

--- a/tests/plugins/uploadwidget/manual/destroyeditor.html
+++ b/tests/plugins/uploadwidget/manual/destroyeditor.html
@@ -12,7 +12,7 @@
 						editor.destroy();
 					} );
 
-					if ( !CKEDITOR.fileTools.isFileUploadSupported ) {
+					if ( !CKEDITOR.fileTools.isFileUploadSupported || bender.tools.env.mobile ) {
 						bender.ignore();
 					}
 				}
