support image3 plugin width, height in dragresize

--- a/plugins/image/dev/image.html
+++ b/plugins/image/dev/image.html
@@ -73,6 +73,11 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	<link href="../../../contents.css" rel="stylesheet">
 </head>
 <body>
+	<h1 class="samples">
+		<a href="../../../samples/old/index.html">CKEditor Samples</a> &raquo; Widget Image
+	</h1>
+
+	<h2>alignClasses samples</h2>
 
 	<textarea id="editor4" cols="10" rows="10">
 		<!-- <h1>Apollo 11</h1>
@@ -138,7 +143,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 		// } );
 
 		CKEDITOR.replace( 'editor4', {
-			extraPlugins: 'image3,dragresize',
+			extraPlugins: 'image,dragresize',
 			image3_alignClasses: [ 'align-left', 'align-center', 'align-right' ],
 			image3_disableResizer: false,
 			contentsCss: [ '../../../contents.css', 'contents.css' ],
