--- a/plugins/image3/dev/image4.html
+++ b/plugins/image3/dev/image4.html
@@ -138,7 +138,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 		// } );
 
 		CKEDITOR.replace( 'editor4', {
-			extraPlugins: 'image3,dragresize',
+			extraPlugins: 'image3,dragresize,divarea',
 			image3_alignClasses: [ 'align-left', 'align-center', 'align-right' ],
 			image3_disableResizer: false,
 			contentsCss: [ '../../../contents.css', 'contents.css' ],
